samples/_failures_safe/1761668917_ae948f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_127a3563.c: In function ‘main’:
./samples/SAFE/__tmp_127a3563.c:164:13: error: expected expression at end of input
  164 |             case
      |             ^~~~
./samples/SAFE/__tmp_127a3563.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_127a3563.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_127a3563.c:164:13: error: expected declaration or statement at end of input
